[package]
name = "vext_vault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "VEXT Vault - Human Intent Attestation Infrastructure"
authors = ["VEXT Labs <security@vext.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Standard Leptos web framework with CSR support
# We are using the stable version for maximum reliability on Vercel
leptos = { version = "0.6.15", features = ["csr"] }
leptos_dom = "0.6.15"
leptos_config = "0.6.15"

# WASM Bindings and Futures
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web-sys with all required features for UI, Touch, and Mouse logic
# These are essential for the VEXT Hold-to-Authorize logic
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Location",
  "Element",
  "UrlSearchParams",
  "console",
  "MouseEvent",
  "TouchEvent"
] }

# Async and Networking
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.5", features = ["http"] }

# Security and Hashing for the Jagged Receipt
sha2 = "0.10"
base64 = "0.22"
zeroize = { version = "1.7", features = ["serde"] }

# Serialization for Attestation Data (The Patent Logic)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Debugging
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimized for the smallest possible WASM file (Institutional speed)
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'