[package]
name = "vext_vault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "VEXT Vault - Human Intent Attestation Infrastructure"
authors = ["VEXT Labs <security@vext.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
leptos_dom = "0.6.15"
leptos_config = "0.6.15"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "Window", "Document", "HtmlElement", "Location", "Element", 
  "UrlSearchParams", "console", "MouseEvent", "TouchEvent"
] }

futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.5", features = ["http"] }

# Cryptography & Security
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
uuid = { version = "1.7", features = ["v4", "js"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# Data Handling (Critical for Canonicalization)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["serde"] }

console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'